--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@ background-color: inherit;
 <section class="menu-container">
   <div style="border-top: 1px solid #42a5f5; margin-top: 1rem; padding-top: 0.5rem; height: 3.5rem;" class="bg-menu">
     <div class="menu-img">
-      <img src="https://upload.cc/i4/d3CR9.jpg" alt="" />
+      <img src="https://upload.cc/i4/d3CR9.jpeg" alt="" />
     </div>
     <div class="menu">
       <a href="https://rumahpulsaid.jualan.me/digital/89521">
